tests/extended/valid/valid-arithmatic.cl
class Main inherits IO {
  main() : Object {
    let a : Int <- 1, b : Int8 <- 5, c : Int64 <- 15, d : Float <- 5.2 in 
    {
      1 + 2;
      3 - 3.2;
      3.2 * 3.0;
    }
  };
};