tests/extended/invalid/invalid-repeated-params.cl

class Thing inherits IO {
  func(a : Int, a : Float) : Int {
    a
  };
};
